------------------------------------------------------
-Add new page for config pie chart
-Pie chart works a lot but not for add in kchart for the moment
=> when you click on PIE3D or PIE2D =>you look at anythink
-bug fix.

2000-01-16 - Montel laurent <montell@club-internet.fr>
------------------------------------------------------
-Now in Bar chart percent % is writting in yaxis
-Improved configparameters
-bug fix
-Start to install label 

2000-01-21 - Montel laurent <montell@club-internet.fr>
------------------------------------------------------
-Now there are label and legend
-Add new page for config font
-Bug fix

2000-01-22 - Montel laurent <montell@club-internet.fr>
------------------------------------------------------
-Add new page for config pie chart
-Now you can choose pie chart
-Bug fix

2000-01-23 - Montel laurent <montell@club-internet.fr>
------------------------------------------------------
-Improved pie chart and page config pie chart

2000-01-28 - Montel laurent <montell@club-internet.fr>
------------------------------------------------------
-Improved save and load parameters (pie parameters, label ,legend ,extcolor)
-Now you can choose color for data.

2000-01-29 - Montel laurent <montell@club-internet.fr>
------------------------------------------------------
-Add new icon for choose chart
-bug fix.

2000-04-01 - Montel laurent <montell@club-internet.fr>
------------------------------------------------------
-Improved "Config"

2000-04-02 - Montel laurent <montell@club-internet.fr>
------------------------------------------------------
-Now you can put an annotation on chart
-Improved "Config Dialog"
-Bug fix

2000-04-08 - Montel laurent <montell@club-internet.fr>
------------------------------------------------------
-Now you can put a cross in "Line chart". Also you can see data
-Now "Combo* Chart" works
-Bug fix.

2000-04-30 - Montel laurent <montell@club-internet.fr>
------------------------------------------------------
-Bug fix