@@ -10,121 +10,97 @@
 #include "kchartparams.h"
 #include <klocale.h>
 #include <kfontdialog.h>
+#include <qlayout.h>
 
 kchartWizardLabelsLegendPage::kchartWizardLabelsLegendPage( QWidget* parent, KChartPart* chart ) :
   QWidget( parent ),
   _chart( chart )
 {
   ytitle2=true;
-  QLabel* titleLA = new QLabel( i18n( "Title:" ), this );
-  titleLA->setGeometry( 270, 10, 100, 30 );
 
-  _titleED = new QLineEdit( this );
-  _titleED->setGeometry( 270, 40, 100, 30 );
+
+  QGridLayout *grid1 = new QGridLayout(this,2,2,15,15);
+
+  QGroupBox* tmpQGroupBox;
+  tmpQGroupBox = new QGroupBox( this, "GroupBox_1" );
+  tmpQGroupBox->setFrameStyle( 49 );
+
+  QGridLayout *grid2 = new QGridLayout(tmpQGroupBox,4,4,15,7);
+
+  QLabel* titleLA = new QLabel( i18n( "Title:" ),tmpQGroupBox );
+  grid2->addWidget(titleLA,0,0);
+
+  _titleED = new QLineEdit( tmpQGroupBox );
+  grid2->addWidget(_titleED,0,1);
   _titleED->setText(_chart->params()->title);
 
-  titlefont = new QPushButton( this);
-  titlefont->setGeometry( 380,40,80,30 );
+  titlefont = new QPushButton( tmpQGroupBox );
+  grid2->addWidget(titlefont,0,2);
   titlefont->setText(i18n("Font"));
 
-  titlecolor=new KColorButton(this);
-  titlecolor->setGeometry( 470,40,80,30 );
+  titlecolor=new KColorButton(tmpQGroupBox);
+  grid2->addWidget(titlecolor,0,3);
   title_color=_chart->params()->TitleColor;
   titlecolor->setColor( title_color );
 
 
-  QLabel* xlabelLA = new QLabel( i18n( "X-Title:" ), this );
-  xlabelLA->setGeometry( 270, 90, 100, 30 );
+  QLabel* xlabelLA = new QLabel( i18n( "X-Title:" ), tmpQGroupBox );
+  grid2->addWidget(xlabelLA,1,0);
 
-  _xlabelED = new QLineEdit( this );
-  _xlabelED->setGeometry( 270, 120, 100, 30 );
+  _xlabelED = new QLineEdit( tmpQGroupBox );
   _xlabelED->setText(_chart->params()->xtitle);
+  grid2->addWidget(_xlabelED,1,1);
 
-  xtitlefont = new QPushButton( this);
-  xtitlefont->setGeometry( 380,120,80,30 );
+  xtitlefont = new QPushButton( tmpQGroupBox );
   xtitlefont->setText(i18n("Font"));
+  grid2->addWidget(xtitlefont,1,2);
 
-  xtitlecolor=new KColorButton(this);
-  xtitlecolor->setGeometry( 470,120,80,30 );
+  xtitlecolor=new KColorButton(tmpQGroupBox);
   x_color=_chart->params()->XTitleColor;
   xtitlecolor->setColor( x_color );
+  grid2->addWidget(xtitlecolor,1,3);
 
 
+  QLabel* ylabelLA = new QLabel( i18n( "Y-Title:" ), tmpQGroupBox );
+  grid2->addWidget(ylabelLA,2,0);
 
-  QLabel* ylabelLA = new QLabel( i18n( "Y-Title:" ), this );
-  ylabelLA->setGeometry( 270, 170, 100, 30 );
-
-  _ylabelED = new QLineEdit( this );
-  _ylabelED->setGeometry( 270, 200, 100, 30 );
+  _ylabelED = new QLineEdit( tmpQGroupBox );
   _ylabelED->setText(_chart->params()->ytitle);
+  grid2->addWidget(_ylabelED,2,1);
 
-  ytitlefont = new QPushButton( this);
-  ytitlefont->setGeometry( 380,200,80,30 );
+
+  ytitlefont = new QPushButton( tmpQGroupBox);
   ytitlefont->setText(i18n("Font"));
+  grid2->addWidget(ytitlefont,2,2);
 
-  ytitlecolor=new KColorButton(this);
-  ytitlecolor->setGeometry( 470,200,80,30 );
+  ytitlecolor=new KColorButton(tmpQGroupBox);
   y_color=_chart->params()->YTitleColor;
   ytitlecolor->setColor( y_color );
+  grid2->addWidget(ytitlecolor,2,3);
 
   //ytitle2 doesn't work
-  QLabel* ylabelLA2 = new QLabel( i18n( "Y-Title2:" ), this );
-  ylabelLA2->setGeometry( 270, 240, 100, 30 );
+  QLabel* ylabelLA2 = new QLabel( i18n( "Y-Title2:" ), tmpQGroupBox );
+  grid2->addWidget(ylabelLA2,3,0);
 
-  _ylabel2ED = new QLineEdit( this );
-  _ylabel2ED->setGeometry( 270, 280, 100, 30 );
+  _ylabel2ED = new QLineEdit( tmpQGroupBox );
   _ylabel2ED->setText(_chart->params()->ytitle2);
+  grid2->addWidget(_ylabel2ED,3,1);
 
-  ytitle2color=new KColorButton(this);
-  ytitle2color->setGeometry( 380,280,80,30 );
+  ytitle2color=new KColorButton(tmpQGroupBox);
   y_color2=_chart->params()->YTitle2Color;
   ytitle2color->setColor( y_color2 );
+  grid2->addWidget(ytitle2color,3,2);
 
   xlabel=_chart->params()->xTitleFont();
   ylabel=_chart->params()->yTitleFont();
   title=_chart->params()->titleFont();
+  grid1->addWidget(tmpQGroupBox,0,0);
 
-
-  /*
-  QButtonGroup* placementBG = new QButtonGroup( i18n( "Legend placement" ),
-												this );
-  placementBG->setGeometry( 390, 10, 140, 210 );
-
-  _righttopRB = new QRadioButton( i18n( "Right/Top" ), this );
-  _righttopRB->setGeometry( 410, 30, 100, 30 );
-  placementBG->insert( _righttopRB, RightTop );
-
-  _rightcenterRB = new QRadioButton( i18n( "Right/Center" ), this );
-  _rightcenterRB->setGeometry( 410, 60, 100, 30 );
-  placementBG->insert( _rightcenterRB, RightCenter );
-
-  _rightbottomRB = new QRadioButton( i18n( "Right/Bottom" ), this );
-  _rightbottomRB->setGeometry( 410, 90, 100, 30 );
-  placementBG->insert( _rightbottomRB, RightBottom );
-
-  _bottomleftRB = new QRadioButton( i18n( "Bottom/Left" ), this );
-  _bottomleftRB->setGeometry( 410, 120, 100, 30 );
-  placementBG->insert( _bottomleftRB, BottomLeft );
-
-  _bottomcenterRB = new QRadioButton( i18n( "Bottom/Center" ), this );
-  _bottomcenterRB->setGeometry( 410, 150, 100, 30 );
-  placementBG->insert( _bottomcenterRB, BottomCenter );
-
-  _bottomrightRB = new QRadioButton( i18n( "Bottom/Right" ), this );
-  _bottomrightRB->setGeometry( 410, 180, 100, 30 );
-  placementBG->insert( _bottomrightRB, BottomRight );
-  // initialize the correct button
-  ((QRadioButton*)placementBG->find( _chart->legendPlacement() ))->setChecked( true );
-
-  connect( placementBG, SIGNAL( clicked( int ) ),
-		   _chart, SLOT( setLegendPlacement( int ) ) );
-  */
-
-  QFrame* tmpQFrame;
+  /*QFrame* tmpQFrame;
   tmpQFrame = new QFrame( this, "Frame_1" );
   tmpQFrame->setGeometry( 10, 10, 240, 220 );
   tmpQFrame->setFrameStyle( QFrame::Sunken | QFrame::Panel );
-  tmpQFrame->setLineWidth( 2 );
+  tmpQFrame->setLineWidth( 2 );*/
 
   /*
   preview = new kchartWidget( _chart, tmpQFrame );
